--- a/dubletLib/dubletLib.csproj
+++ b/dubletLib/dubletLib.csproj
@@ -48,6 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BrowserTab.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="DubletProject.cs" />
     <Compile Include="HelperLoadResource.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
